[feat] getPart 변경으로 인한 변경 수정 (#421)